--- a/public/static/style.css
+++ b/public/static/style.css
@@ -6,6 +6,7 @@ body {
     flex-direction: column;
     align-items: center;
     width: 100vw;
+    min-height: 100vh;
     font-family: sans-serif;
 }
 a:hover, a:focus { text-decoration: underline; }
@@ -13,6 +14,22 @@ a {
     color: black;
     text-decoration: none;
     outline: none;
+}
+footer {
+    margin-top: auto;
+    padding: 1rem;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+footer > div {
+    margin: 0 .5rem;
+}
+footer, footer * {
+    color: #00000080 !important;
+    font-size: .9rem;
+    text-align: center;
 }
 
 .homebtn {
@@ -33,7 +50,8 @@ a {
 }
 .main > h1 {
     font-size: 1.4rem;
-    margin-bottom: 0;
+    margin-top: 1.5rem;
+    margin-bottom: .5rem;
     text-align: center;
 }
 .content { white-space: pre-line; }
@@ -43,6 +61,9 @@ a {
     padding: 2rem;
     box-sizing: border-box;
     gap: 1rem;
+}
+.home-main > h1 {
+    font-size: 1.6rem;
 }
 .home-main, .toc, #search-results {
     display: flex;
@@ -66,6 +87,9 @@ a {
 
 @media only screen and (max-width: 750px) {
     .main { margin-top: 4rem; }
+    .main > h1 {
+        margin-top: unset;
+    }
     .main > h1, .content {
         width: 90vw;
         max-width: unset;
